--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "automation",
     "Tool",
     "Evaluation",
-    "JavaScript"
+    "JavaScript",
+    "Protractor"
   ],
   "author": "Adrian Benko <benko.adrian@gmail.com>",
   "license": "SEE LICENSE IN LICENSE.md",
@@ -29,6 +30,7 @@
   "dependencies": {
     "chai": "^4.2.0",
     "cucumber": "^6.0.5",
+    "cucumber-pretty": "^6.0.0",
     "jasmine-spec-reporter": "^5.0.2",
     "protractor": "^7.0.0",
     "protractor-cucumber-framework": "^6.2.1"
