--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "chai": "^4.2.0",
     "cucumber": "^6.0.5",
+    "cucumber-html-reporter": "^5.2.0",
     "cucumber-pretty": "^6.0.0",
     "jasmine-spec-reporter": "^5.0.2",
     "protractor": "^7.0.0",
